# example-vosk-rs-linux

./: Cargo.toml  README.md  build.rs
src/: audio_input.rs  main.rs  speech_recognizer.rs
